--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Set window base index to start at 1 instead of 0
+set -g base-index 1
+
 # Rebind the prefix key to 'Ctrl + \'
 unbind-key C-b
 set -g prefix 'C-\'
@@ -7,14 +10,14 @@ set -g status-keys vi
 
 # Key bindings
 bind-key n last-window
-bind-key | split-window -h -c "#{pane_current_path}"
-bind-key - split-window -v -c "#{pane_current_path}"
+bind-key s split-window -h -c "#{pane_current_path}"
+bind-key v split-window -v -c "#{pane_current_path}"
 
-# Vim style pane selection
-bind h select-pane -L
-bind j select-pane -D 
-bind k select-pane -U
-bind l select-pane -R
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D 
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
