--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,8 +10,8 @@ set -g status-keys vi
 
 # Key bindings
 bind-key n last-window
-bind-key s split-window -h -c "#{pane_current_path}"
-bind-key v split-window -v -c "#{pane_current_path}"
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -22,7 +22,10 @@ bind -n M-l select-pane -R
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'o0th/tmux-nova'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'seebi/tmux-colors-solarized'
+set -g @colors-solarized 'dark'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # tmux.conf)
