--- a/.tmux.conf
+++ b/.tmux.conf
@@ -23,8 +23,9 @@ bind -n M-l select-pane -R
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-sidebar'
 set -g @plugin 'Morantron/tmux-fingers'
+set -g @plugin 'laktak/extrakto'
+set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'seebi/tmux-colors-solarized'
 set -g @colors-solarized 'dark'
 
