--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,13 +19,46 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+# The following setting set vim key bindings for when in scrolling mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+
+# Status bar theme
+set -g status-position bottom
+set -g status-bg colour232
+set -g status-fg colour240
+# set -g status-style dim
+set -g status-left ''
+set -g status-right '%d/%m %H:%M:%S'
+set -g status-right-length 50
+set -g status-left-length 20
+
+setw -g window-status-current-style fg=colour9
+setw -g window-status-current-style bg=colour245
+setw -g window-status-current-style bold
+setw -g window-status-current-format ' #I#[fg=colour237]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-style fg=colour138
+setw -g window-status-style bg=colour235
+setw -g window-status-style none
+# setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-style bold
+setw -g window-status-bell-style fg=colour252
+setw -g window-status-bell-style bg=colour1
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'Morantron/tmux-fingers'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'schasse/tmux-jump'
+set -g @plugin 'tmux-plugins/tmux-urlview'
+set -g @plugin 'tmux-plugins/tmux-fpp'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # tmux.conf)
