--- a/.tmux.conf
+++ b/.tmux.conf
@@ -29,7 +29,6 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection cl
 set -g status-position bottom
 set -g status-bg colour232
 set -g status-fg colour240
-# set -g status-style dim
 set -g status-left ''
 set -g status-right '%d/%m %H:%M:%S'
 set -g status-right-length 50
@@ -38,15 +37,15 @@ set -g status-left-length 20
 setw -g window-status-current-style fg=colour9
 setw -g window-status-current-style bg=colour245
 setw -g window-status-current-style bold
-setw -g window-status-current-format ' #I#[fg=colour237]:#[fg=colour255]#W#[fg=colour50]#F '
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour250]#W#[fg=colour50]#F '
 
 setw -g window-status-style fg=colour138
-setw -g window-status-style bg=colour235
+setw -g window-status-style bg=colour240
 setw -g window-status-style none
-# setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour245]#W#[fg=colour244]#F '
 
 setw -g window-status-bell-style bold
-setw -g window-status-bell-style fg=colour252
+setw -g window-status-bell-style fg=colour247
 setw -g window-status-bell-style bg=colour1
 
 # List of plugins
