--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,6 +58,12 @@ set -g @plugin 'laktak/extrakto'
 set -g @plugin 'schasse/tmux-jump'
 set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-fpp'
+# tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
+set -g @plugin 'fcsonline/tmux-thumbs'
+
+# Set configs for tmux-thumbs
+set -g @thumbs-hint-bg-color yellow
+set -g @thumbs-hint-fg-color black
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # tmux.conf)
