--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,9 +9,9 @@ setw -g mode-keys vi
 set -g status-keys vi
 
 # Key bindings
-bind-key n last-window
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
+bind-key -n F4 copy-mode
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -60,10 +60,12 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 set -g @plugin 'tmux-plugins/tmux-fpp'
 # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
 set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Set configs for tmux-thumbs
 set -g @thumbs-hint-bg-color yellow
 set -g @thumbs-hint-fg-color black
+set -g @thumbs-command 'echo -n {} | pbcopy'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # tmux.conf)
