--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,7 @@ set -g @plugin 'tmux-plugins/tmux-fpp'
 # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'wfxr/tmux-fzf-url'
 
 # Set configs for tmux-thumbs
 set -g @thumbs-hint-bg-color yellow
