--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,6 @@
+# Set default terminal
+set -g default-terminal "screen-256color"
+
 # Set window base index to start at 1 instead of 0
 set -g base-index 1
 
@@ -12,6 +15,12 @@ set -g status-keys vi
 bind-key v split-window -h -c "#{pane_current_path}"
 bind-key s split-window -v -c "#{pane_current_path}"
 bind-key -n F4 copy-mode
+
+# Resizing windows
+bind-key -r C-k resize-pane -U 10
+bind-key -r C-j resize-pane -D 10
+bind-key -r C-h resize-pane -L 10
+bind-key -r C-l resize-pane -R 10
 
 # Use Alt-vim keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -56,12 +65,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'laktak/extrakto'
 set -g @plugin 'schasse/tmux-jump'
-set -g @plugin 'tmux-plugins/tmux-urlview'
+# set -g @plugin 'tmux-plugins/tmux-urlview' # Only works for OSX
 set -g @plugin 'tmux-plugins/tmux-fpp'
 # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
 set -g @plugin 'fcsonline/tmux-thumbs'
 set -g @plugin 'tmux-plugins/tmux-open'
-set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Set configs for tmux-thumbs
 set -g @thumbs-hint-bg-color yellow
