--- a/.config/i3/config
+++ b/.config/i3/config
@@ -103,6 +103,11 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
+# control workspace bindings
+bindsym $mod+Shift+n workspace prev
+bindsym $mod+n workspace next
+bindsym $mod+Tab workspace back_and_forth
+
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1"
@@ -177,16 +182,17 @@ mode "resize" {
   bindsym $mod+r mode "default"
 }
 
-bindsym $mod+r mode "resize"
-
 # Set gaps
-gaps inner 4
-gaps outer 2
+gaps inner 10
+gaps outer 5
+# smart_gaps on
+smart_gaps inverse_outer
 
 # Remove window decorations but show a border for the window currently in focus
-for_window [class="^.*"] border pixel 3
+for_window [class="^.*"] border pixel 2
 default_border pixel 0
 default_floating_border pixel 0
+smart_borders on
 
 # Set wallpaper
 exec --no-startup-id nitrogen --restore
@@ -197,12 +203,9 @@ exec xrandr --dpi 144
 # Set key bindings for system power management
 set $Locker i3lock && sleep 1
 
-set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+set $mode_system System (e) logout, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
-    bindsym l exec --no-startup-id $Locker, mode "default"
     bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
-    bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
     bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
@@ -220,12 +223,32 @@ exec_always --no-startup-id ~/.config/polybar/launch.sh
 exec_always --no-startup-id ~/.config/startup.sh
 
 # Startup applications
-# exec --no-startup-id i3-msg "workspace 1; exec alacritty"
-exec --no-startup-id i3-msg "workspace 2; exec thunderbird"
-exec --no-startup-id i3-msg "workspace 3; exec spotify"
 exec_always --no-startup-id $HOME/.cargo/bin/i3wsr
+exec --no-startup-id alacritty
+exec --no-startup-id picom -b
 
 # Launch application bindings
+bindsym $mod+c exec --no-startup-id code
 bindsym $mod+w exec --no-startup-id google-chrome
 bindsym $mod+Shift+Return exec alacritty -e ranger
-# bindsym $mod+r exec --no-startup-id ranger
+
+# Media control bindings
+bindsym $mod+F9 exec playerctl play-pause
+bindsym $mod+F10 exec playerctl previous
+bindsym $mod+F11 exec playerctl next
+
+# colors
+set $bg     #2c2c2e
+set $fg     #9f9f9f
+set $hi     #efef8f
+set $ac     #61AFEF
+set $tx     #040404
+set $ia     #8f8f8f
+set $be     #8faf9f
+set $yw     #ccdc90
+set $gn     #88b090
+set $rd     #e89393
+set $in     #ABB2BF
+
+# set some nice colors      border     background  text
+client.focused              $ac        $ac         $tx      $in
