--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,28 +8,31 @@ set -g base-index 1
 unbind-key C-b
 set -g prefix 'C-\'
 bind-key 'C-\' send-prefix
-
-# Set vi mode keys for copy mode
 setw -g mode-keys vi
 set -g status-keys vi
 
 # Key bindings
-  # Windows
-  bind-key v split-window -h -c "#{pane_current_path}"
-  bind-key s split-window -v -c "#{pane_current_path}"
-  bind-key ] copy-mode
+bind-key v split-window -h -c "#{pane_current_path}"
+bind-key s split-window -v -c "#{pane_current_path}"
+bind-key -n F4 copy-mode
 
-  # Resizing windows
-  bind-key -r C-k resize-pane -U 10
-  bind-key -r C-j resize-pane -D 10
-  bind-key -r C-h resize-pane -L 10
-  bind-key -r C-l resize-pane -R 10
+# Resizing windows
+bind-key -r C-k resize-pane -U 10
+bind-key -r C-j resize-pane -D 10
+bind-key -r C-h resize-pane -L 10
+bind-key -r C-l resize-pane -R 10
 
-  # Use Alt-vim keys without prefix key to switch panes
-  bind -n M-h select-pane -L
-  bind -n M-j select-pane -D
-  bind -n M-k select-pane -U
-  bind -n M-l select-pane -R
+# Use Alt-vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+# The following setting set vim key bindings for when in scrolling mode
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi V send -X select-line
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # Status bar theme
 set -g status-position bottom
@@ -54,17 +57,18 @@ setw -g window-status-bell-style bold
 setw -g window-status-bell-style fg=colour247
 setw -g window-status-bell-style bg=colour1
 
-# List of plugins
-set -g @plugin 'laktak/extrakto'
-set -g @plugin 'schasse/tmux-jump'
+# # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-urlview' # Only works for OSX
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'laktak/extrakto'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'schasse/tmux-jump'
+# set -g @plugin 'tmux-plugins/tmux-urlview' # Only works for OSX
 set -g @plugin 'tmux-plugins/tmux-fpp'
 # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
 set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 # Set configs for tmux-thumbs
 set -g @thumbs-hint-bg-color yellow
@@ -72,5 +76,5 @@ set -g @thumbs-hint-fg-color black
 set -g @thumbs-command 'echo -n {} | pbcopy'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
-# type this in terminal if tmux is already running
+# tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
