--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -135,7 +135,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #
 # opacity-rule = []
 opacity-rule = [
-  "88:class_g = 'Alacritty' && focused"
+  "98:class_g = 'Alacritty' && focused",
+  "99:name *= 'Dunst'",
+  "95:name *= 'polybar'"
 ];
 
 #################################
