--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Set default terminal
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Set window base index to start at 1 instead of 0
 set -g base-index 1
