--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,27 +12,43 @@ setw -g mode-keys vi
 set -g status-keys vi
 
 # Key bindings
-bind-key v split-window -h -c "#{pane_current_path}"
-bind-key s split-window -v -c "#{pane_current_path}"
-bind-key -n F4 copy-mode
+  # Open new windows in the same directory as the parent
+  bind c new-window -c "#{pane_current_path}"
 
-# Resizing windows
-bind-key -r C-k resize-pane -U 10
-bind-key -r C-j resize-pane -D 10
-bind-key -r C-h resize-pane -L 10
-bind-key -r C-l resize-pane -R 10
+  # resize current pane with hjkl (repeatable)
+  unbind l
+  bind -r l resize-pane -R 8
+  unbind h
+  bind -r h resize-pane -L 8
+  unbind k
+  bind -r k resize-pane -U 4
+  unbind j
+  bind -r j resize-pane -D 4  
 
-# Use Alt-vim keys without prefix key to switch panes
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+  # reload config
+  unbind r
+  bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"  ## Remap splits so that they are swapped
 
-# The following setting set vim key bindings for when in scrolling mode
+  bind-key v split-window -h -c "#{pane_current_path}"
+  bind-key s split-window -v -c "#{pane_current_path}"
+
+  ## Smart pane switching with awareness of vim and fzf
+  forward_programs="view|n?vim?|fzf"
+
+  should_forward="ps -o state= -o comm= -t '#{pane_tty}' \
+                  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?($forward_programs)(diff)?$'"
+
+  bind -n C-h if-shell "$should_forward" "send-keys C-h" "select-pane -L"
+  bind -n C-j if-shell "$should_forward" "send-keys C-j" "select-pane -D"
+  bind -n C-k if-shell "$should_forward" "send-keys C-k" "select-pane -U"
+  bind -n C-l if-shell "$should_forward" "send-keys C-l" "select-pane -R"
+  bind -n C-\\ if-shell "$should_forward" "send-keys C-\\" "select-pane -l"
+
+# Copy mode bindings
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send -X begin-selection
 bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
 
 # Status bar theme
 set -g status-position bottom
@@ -57,23 +73,22 @@ setw -g window-status-bell-style bold
 setw -g window-status-bell-style fg=colour247
 setw -g window-status-bell-style bg=colour1
 
-# # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'laktak/extrakto'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'schasse/tmux-jump'
-# set -g @plugin 'tmux-plugins/tmux-urlview' # Only works for OSX
-set -g @plugin 'tmux-plugins/tmux-fpp'
-# tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
-set -g @plugin 'fcsonline/tmux-thumbs'
-set -g @plugin 'tmux-plugins/tmux-open'
+# Plugins
+  set -g @plugin 'tmux-plugins/tpm'
+  set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-yank'
+  set -g @plugin 'laktak/extrakto'
+  set -g @plugin 'christoomey/vim-tmux-navigator'
+  set -g @plugin 'schasse/tmux-jump'
+  set -g @plugin 'tmux-plugins/tmux-fpp'
+  # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
+  set -g @plugin 'fcsonline/tmux-thumbs'
+  set -g @plugin 'tmux-plugins/tmux-open'
 
-# Set configs for tmux-thumbs
-set -g @thumbs-hint-bg-color yellow
-set -g @thumbs-hint-fg-color black
-set -g @thumbs-command 'echo -n {} | pbcopy'
+  ## tmux-thumbs
+  set -g @thumbs-hint-bg-color yellow
+  set -g @thumbs-hint-fg-color black
+  set -g @thumbs-command 'echo -n {} | pbcopy'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
 # tmux.conf)
