--- a/.tmux.conf
+++ b/.tmux.conf
@@ -79,7 +79,7 @@ setw -g window-status-bell-style bg=colour1
   set -g @plugin 'tmux-plugins/tmux-yank'
   set -g @plugin 'laktak/extrakto'
   set -g @plugin 'christoomey/vim-tmux-navigator'
-  set -g @plugin 'schasse/tmux-jump'
+  # set -g @plugin 'schasse/tmux-jump'
   set -g @plugin 'tmux-plugins/tmux-fpp'
   # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
   set -g @plugin 'fcsonline/tmux-thumbs'
