--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,21 +1,23 @@
-# Set default terminal
-set -g default-terminal "xterm-256color"
+# Terminal settings
+  set -g default-terminal "xterm-256color"
 
-# Set window base index to start at 1 instead of 0
-set -g base-index 1
-
-# Rebind the prefix key to 'Ctrl + \'
-unbind-key C-b
-set -g prefix 'C-\'
-bind-key 'C-\' send-prefix
-setw -g mode-keys vi
-set -g status-keys vi
+  # Set window base index to start at 1 instead of 0
+  set -g base-index 1
 
 # Key bindings
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
 
-  # resize current pane with hjkl (repeatable)
+  # Skip the confirmation prompt when killing windows and panes
+  bind x kill-pane
+  bind & kill-window
+
+  # Rebind the prefix key to 'Ctrl + \'
+  unbind C-b
+  set -g prefix 'C-\'
+  bind 'C-\' send-prefix
+
+  # Resize current pane with hjkl (repeatable)
   unbind l
   bind -r l resize-pane -R 8
   unbind h
@@ -25,14 +27,65 @@ set -g status-keys vi
   unbind j
   bind -r j resize-pane -D 4  
 
-  # reload config
+  # Reload config
   unbind r
-  bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"  ## Remap splits so that they are swapped
+  bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"  ## Remap splits so that they are swapped
 
-  bind-key v split-window -h -c "#{pane_current_path}"
-  bind-key s split-window -v -c "#{pane_current_path}"
+  bind v split-window -h -c "#{pane_current_path}"
+  bind s split-window -v -c "#{pane_current_path}"
 
-  ## Smart pane switching with awareness of vim and fzf
+# Vim bindings
+  setw -g mode-keys vi
+  set -g status-keys vi
+  bind -T copy-mode-vi v send -X begin-selection
+  bind -T copy-mode-vi V send -X select-line
+  bind -T copy-mode-vi y send -X copy-selection-and-cancel
+
+# Status bar theme
+  set -g status-position bottom
+  set -g status-bg colour235
+  set -g status-fg colour247
+  set -g status-left ''
+  set -g status-right '%d/%m %H:%M:%S'
+  set -g status-right-length 50
+  set -g status-left-length 20
+
+  setw -g window-status-current-style fg=colour9
+  setw -g window-status-current-style bg=colour245
+  setw -g window-status-current-style bold
+  setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour39]#W#[fg=colour82]#F '
+
+  setw -g window-status-style fg=colour138
+  setw -g window-status-style bg=colour240
+  setw -g window-status-style none
+  setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour241]#W#[fg=colour244]#F '
+
+  setw -g window-status-bell-style bold
+  setw -g window-status-bell-style fg=colour247
+  setw -g window-status-bell-style bg=colour1
+
+# Plugins
+  set -g @plugin 'tmux-plugins/tpm'
+  set -g @plugin 'tmux-plugins/tmux-sensible'
+  set -g @plugin 'tmux-plugins/tmux-yank'
+  set -g @plugin 'laktak/extrakto'
+  set -g @plugin 'christoomey/vim-tmux-navigator'
+  # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
+  set -g @plugin 'fcsonline/tmux-thumbs'
+
+  ## tmux-thumbs
+  set -g @thumbs-hint-bg-color yellow
+  set -g @thumbs-hint-fg-color black
+
+  if-shell "[[ `uname` == 'Darwin' ]]" \
+    "set -g @thumbs-command 'echo -n {} | pbcopy'" \
+    "set -g @thumbs-command 'echo -n {} | xclip -sel clip-board'"
+
+  # Initialize TMUX plugin manager (keep this line at the very bottom of
+  # tmux.conf)
+  run '~/.tmux/plugins/tpm/tpm'
+
+# Smart pane switching with awareness of vim and fzf
   forward_programs="view|n?vim?|fzf"
 
   should_forward="ps -o state= -o comm= -t '#{pane_tty}' \
@@ -43,53 +96,3 @@ set -g status-keys vi
   bind -n C-k if-shell "$should_forward" "send-keys C-k" "select-pane -U"
   bind -n C-l if-shell "$should_forward" "send-keys C-l" "select-pane -R"
   bind -n C-\\ if-shell "$should_forward" "send-keys C-\\" "select-pane -l"
-
-# Copy mode bindings
-set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send -X begin-selection
-bind-key -T copy-mode-vi V send -X select-line
-bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
-
-# Status bar theme
-set -g status-position bottom
-set -g status-bg colour235
-set -g status-fg colour247
-set -g status-left ''
-set -g status-right '%d/%m %H:%M:%S'
-set -g status-right-length 50
-set -g status-left-length 20
-
-setw -g window-status-current-style fg=colour9
-setw -g window-status-current-style bg=colour245
-setw -g window-status-current-style bold
-setw -g window-status-current-format '#I#[fg=colour250]:#[fg=colour39]#W#[fg=colour82]#F '
-
-setw -g window-status-style fg=colour138
-setw -g window-status-style bg=colour240
-setw -g window-status-style none
-setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour241]#W#[fg=colour244]#F '
-
-setw -g window-status-bell-style bold
-setw -g window-status-bell-style fg=colour247
-setw -g window-status-bell-style bg=colour1
-
-# Plugins
-  set -g @plugin 'tmux-plugins/tpm'
-  set -g @plugin 'tmux-plugins/tmux-sensible'
-  set -g @plugin 'tmux-plugins/tmux-yank'
-  set -g @plugin 'laktak/extrakto'
-  set -g @plugin 'christoomey/vim-tmux-navigator'
-  # set -g @plugin 'schasse/tmux-jump'
-  set -g @plugin 'tmux-plugins/tmux-fpp'
-  # tmux-thumbs requires an install of rust. Download at https://rustup.rs/.
-  set -g @plugin 'fcsonline/tmux-thumbs'
-  set -g @plugin 'tmux-plugins/tmux-open'
-
-  ## tmux-thumbs
-  set -g @thumbs-hint-bg-color yellow
-  set -g @thumbs-hint-fg-color black
-  set -g @thumbs-command 'echo -n {} | pbcopy'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of
-# tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
