--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,4 @@
 # Terminal settings
-  set -g default-terminal "xterm-256color"
-
   # Set window base index to start at 1 instead of 0
   set -g base-index 1
 
@@ -31,6 +29,7 @@
   unbind r
   bind r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"  ## Remap splits so that they are swapped
 
+  # Set window splits so that they make sense
   bind v split-window -h -c "#{pane_current_path}"
   bind s split-window -v -c "#{pane_current_path}"
 
