--- a/.config/i3/config
+++ b/.config/i3/config
@@ -203,15 +203,16 @@ exec xrandr --dpi 144
 # Set key bindings for system power management
 set $Locker i3lock && sleep 3
 
-set $mode_system System (e) logout, (r) reboot, (Shift+s) shutdown
+set $mode_system System (a) away, (e) logout, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
-    bindsym e exec --no-startup-id i3-msg exit, mode "default"
-    bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
+  bindsym a exec --no-startup-id "playerctl -p spotify pause; xset dpms force off", mode "default"
+  bindsym e exec --no-startup-id i3-msg exit, mode "default"
+  bindsym r exec --no-startup-id systemctl reboot, mode "default"
+  bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
-    # back to normal: Enter or Escape
-    bindsym Return mode "default"
-    bindsym Escape mode "default"
+  # back to normal: Enter or Escape
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
 }
 
 bindsym $mod+Pause mode "$mode_system"
