--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@
   set -g base-index 1
 
 # Key bindings
+  # Sessions switcher
+  bind C-j new-window -n "session-switcher" "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
 
