fix scrolling config

--- a/logid/logid.cfg
+++ b/logid/logid.cfg
@@ -1,6 +1,6 @@
 devices: (
 {
-    name: "Wireless Mouse MX Master";
+    name: "Wireless Mouse MX Master 3";
 
     smartshift:
     {
@@ -16,12 +16,12 @@ devices: (
       up: {
         mode: "Axis";
         axis: "REL_WHEEL";
-        axis_multiplier: 9;
+        axis_multiplier: 3;
       },
       down: {
         mode: "Axis";
         axis: "REL_WHEEL";
-        axis_multiplier: -9;
+        axis_multiplier: -3;
       },
     };
 
