--- a/logid/logid.cfg
+++ b/logid/logid.cfg
@@ -10,18 +10,18 @@ devices: (
 
     hiresscroll:
     {
-      hires: false;
+      hires: true;
       invert: false;
       target: true;
       up: {
         mode: "Axis";
         axis: "REL_WHEEL";
-        axis_multiplier: 3;
+        axis_multiplier: 0.35;
       },
       down: {
         mode: "Axis";
         axis: "REL_WHEEL";
-        axis_multiplier: -3;
+        axis_multiplier: -0.35;
       },
     };
 
