--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -17,7 +17,7 @@ height = 34
 padding = 2
 module-margin = 0.5
 
-font-0 = JetBrainsMono Nerd Font Mono:size=13;3
+font-0 = JetBrainsMonoNL Nerd Font Mono:size=13;3
 
 ; One Dark colors
 background = #1e2127
