change previous workspace keybinding

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -104,7 +104,7 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # control workspace bindings
-bindsym $mod+Shift+n workspace prev
+bindsym $mod+p workspace prev
 bindsym $mod+n workspace next
 bindsym $mod+Tab workspace back_and_forth
 
