--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,6 +1,7 @@
 # Terminal settings
   # Set window base index to start at 1 instead of 0
   set -g base-index 1
+  set -g default-terminal "screen-256color"
 
 # Key bindings
   # Sessions switcher
