add switch window to tmux config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,6 +19,8 @@
   set -g prefix 'C-\'
   bind 'C-\' send-prefix
 
+  bind-key '\' last-window
+
   # Resize current pane with hjkl (repeatable)
   unbind l
   bind -r l resize-pane -R 8
