--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,6 +6,7 @@
 # Key bindings
   # Sessions switcher
   bind C-j new-window -n "session-switcher" "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+  bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
@@ -51,7 +52,7 @@
   set -g status-bg colour235
   set -g status-fg colour247
   set -g status-left ''
-  set -g status-right '%d/%m %H:%M:%S'
+  set -g status-right '#(~/.config/tmux/scripts/unit_tests.zsh) #[fg=colour247]%d/%m %H:%M:%S'
   set -g status-right-length 50
   set -g status-left-length 20
 
