--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,11 @@
 
 # Key bindings
   # Sessions switcher
-  bind C-j new-window -n "session-switcher" "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+  bind C-j new-window -n "session-switcher" "tmux list-sessions | \
+    sed -E 's/:.*$//' | \
+    grep -v \"^$(tmux display-message -p '#S')\$\" | \
+    fzf --reverse | \
+    xargs tmux switch-client -t"
   bind-key -r f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
 
   # Open new windows in the same directory as the parent
