--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,7 +56,7 @@
   set -g status-bg colour235
   set -g status-fg colour247
   set -g status-left ''
-  set -g status-right '#(~/.config/tmux/scripts/unit_tests.zsh) #[fg=colour247]%d/%m %H:%M:%S'
+  # set -g status-right '#(~/.config/tmux/scripts/unit_tests.zsh) #[fg=colour247]%d/%m %H:%M:%S'
   set -g status-right-length 50
   set -g status-left-length 20
 
