--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,7 +10,9 @@
     grep -v \"^$(tmux display-message -p '#S')\$\" | \
     fzf --reverse | \
     xargs tmux switch-client -t"
-  bind-key -r f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
+  bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
+  unbind g
+  bind-key g run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
