fix bug is worktree switcher

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -11,8 +11,7 @@
     fzf --reverse | \
     xargs tmux switch-client -t"
   bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
-  unbind g
-  bind-key g run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
+  bind-key C-k run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
