--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,11 +5,7 @@
 
 # Key bindings
   # Sessions switcher
-  bind C-j new-window -n "session-switcher" "tmux list-sessions | \
-    sed -E 's/:.*$//' | \
-    grep -v \"^$(tmux display-message -p '#S')\$\" | \
-    fzf --reverse | \
-    xargs tmux switch-client -t"
+  bind C-j new-window -n "session-switcher" "tmux-session-switcher"
   bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
   bind-key C-k run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
 
@@ -25,7 +21,8 @@
   set -g prefix 'C-\'
   bind 'C-\' send-prefix
 
-  bind-key '\' last-window
+  unbind a
+  bind-key 'a' last-window
 
   # Resize current pane with hjkl (repeatable)
   unbind l
