--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -4,8 +4,9 @@
   set -g default-terminal "alacritty"
 
 # Key bindings
-  # Sessions switcher
+  # Sessions management
   bind C-j new-window -n "session-switcher" "tmux-session-switcher"
+  bind C-q new-window -n "session-killer" "tmux-session-killer"
   bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
   bind-key C-k run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
 
