fix key binding for session killer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,7 @@
 # Key bindings
   # Sessions management
   bind C-j new-window -n "session-switcher" "tmux-session-switcher"
-  bind C-q new-window -n "session-killer" "tmux-session-killer"
+  bind C-x new-window -n "session-killer" "tmux-session-killer"
   bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
   bind-key C-k run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
 
