--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,8 +7,8 @@
   # Sessions management
   bind C-j new-window -n "session-switcher" "tmux-session-switcher"
   bind C-x new-window -n "session-killer" "tmux-session-killer"
-  bind-key f run-shell "tmux neww ~/.local/bin/tmuxinator-sessionizer"
-  bind-key C-k run-shell "tmux neww ~/.local/bin/tmuxinator-worktree-sessionizer"
+  bind f new-window -n "sessionizer" "tmuxinator-sessionizer"
+  bind C-k new-window -n "worktree-sessionizer" -c "#{pane_current_path}" "tmuxinator-worktree-sessionizer"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
