remove date time from tmux status line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -55,7 +55,8 @@
   set -g status-bg colour235
   set -g status-fg colour247
   set -g status-left ''
-  set -g status-right '#[fg=colour39]#S #[fg=colour247]%d/%m %H:%M:%S'
+  set -g status-right '#[fg=colour39]#S'
+  # set -g status-right '#[fg=colour39]#S #[fg=colour247]%d/%m %H:%M:%S'
   set -g status-right-length 50
   set -g status-left-length 20
 
