add edit dotfile script and add keybinding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,6 +42,10 @@
   # Set window splits so that they make sense
   bind v split-window -h -c "#{pane_current_path}"
   bind s split-window -v -c "#{pane_current_path}"
+ 
+  # Edit dotfiles
+  unbind t
+  bind t new-window -n "edit-dotfiles" "edit-dotfile $DOTFILES_DIR"
 
 # Vim bindings
   setw -g mode-keys vi
