change keybinding for last window

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -22,8 +22,8 @@
   set -g prefix 'C-\'
   bind 'C-\' send-prefix
 
-  unbind a
-  bind-key 'a' last-window
+  unbind ;
+  bind-key ';' last-window
 
   # Resize current pane with hjkl (repeatable)
   unbind l
