change keybinding for tmux session switch dispose

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,7 +9,8 @@
   bind C-x new-window -n "session-killer" "tmux-session-killer"
   bind f new-window -n "sessionizer" "tmuxinator-sessionizer"
   bind C-k new-window -n "worktree-sessionizer" -c "#{pane_current_path}" "tmuxinator-worktree-sessionizer"
-  bind C-q new-window -n "tmux-session-switch-dispose" "tmux-session-switch-dispose"
+  unbind q
+  bind q new-window -n "tmux-session-switch-dispose" "tmux-session-switch-dispose"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
@@ -23,7 +24,7 @@
   set -g prefix 'C-\'
   bind 'C-\' send-prefix
 
-  unbind ;
+  unbind ';'
   bind-key ';' last-window
 
   # Resize current pane with hjkl (repeatable)
