add java to packages

--- a/.ansible/playbook.yml
+++ b/.ansible/playbook.yml
@@ -11,6 +11,7 @@
           - tmux
           - fzf
           - jq
+          - jre-openjdk
         state: present
       become: true
       become_method: sudo
