add tree package to playbook

--- a/.ansible/playbook.yml
+++ b/.ansible/playbook.yml
@@ -12,6 +12,7 @@
           - fzf
           - jq
           - jre-openjdk
+          - tree
         state: present
       become: true
       become_method: sudo
