swap bindings for switch dispose and session killer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,11 +6,11 @@
 # Key bindings
   # Sessions management
   bind C-j new-window -n "session-switcher" "tmux-session-switcher"
-  bind C-x new-window -n "session-killer" "tmux-session-killer"
+  unbind q
+  bind q new-window -n "session-killer" "tmux-session-killer"
   bind f new-window -n "sessionizer" "tmuxinator-sessionizer"
   bind C-k new-window -n "worktree-sessionizer" -c "#{pane_current_path}" "tmuxinator-worktree-sessionizer"
-  unbind q
-  bind q new-window -n "tmux-session-switch-dispose" "tmux-session-switch-dispose"
+  bind C-x new-window -n "tmux-session-switch-dispose" "tmux-session-switch-dispose"
 
   # Open new windows in the same directory as the parent
   bind c new-window -c "#{pane_current_path}"
