--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,7 @@
   # Set window base index to start at 1 instead of 0
   set -g base-index 1
   set -g default-terminal "alacritty"
+  set -ag terminal-overrides ",alacritty:RGB"
 
 # Key bindings
   # Sessions management
