change tmux statusbar color to match alacritty

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -59,11 +59,11 @@
 
 # Status bar theme
   set -g status-position bottom
-  set -g status-bg colour235
+  # set -g status-bg '#272d34'
+  set -g status-bg '#1f2329' # same color as alacritty bg
   set -g status-fg colour247
   set -g status-left ''
   set -g status-right '#[fg=colour39]#S'
-  # set -g status-right '#[fg=colour39]#S #[fg=colour247]%d/%m %H:%M:%S'
   set -g status-right-length 50
   set -g status-left-length 20
 
