--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,8 +1,8 @@
 # Terminal settings
   # Set window base index to start at 1 instead of 0
   set -g base-index 1
-  set -g default-terminal "alacritty"
-  set -ag terminal-overrides ",alacritty:RGB"
+  set -g default-terminal "tmux-256color"
+  set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Key bindings
   # Sessions management
