change terminal to x term to work on mac

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,7 @@
 # Terminal settings
   # Set window base index to start at 1 instead of 0
   set -g base-index 1
-  set -g default-terminal "tmux-256color"
+  set -g default-terminal "xterm-256color"
   set -ag terminal-overrides ",xterm-256color:RGB"
 
 # Key bindings
